gui code cleaned up a bit. drawing area to show pieces in a separate file/class. don't get confused, edit pieces drawing area is temporary on the left side

--- a/src/gui.glade
+++ b/src/gui.glade
@@ -140,14 +140,7 @@
                 <property name="visible">True</property>
                 <property name="spacing">10</property>
                 <child>
-                  <widget class="GtkDrawingArea" id="drawingarea_pick_pieces">
-                    <property name="width_request">360</property>
-                    <property name="visible">True</property>
-                  </widget>
-                  <packing>
-                    <property name="padding">2</property>
-                    <property name="position">0</property>
-                  </packing>
+                  <placeholder/>
                 </child>
                 <child>
                   <widget class="GtkTable" id="table_editing_piece">
@@ -275,5 +268,9 @@ You should have received a copy of the GNU General Public License along with blo
         </child>
       </widget>
     </child>
+  </widget>
+  <widget class="GtkDrawingArea" id="drawingarea_pick_pieces">
+    <property name="width_request">360</property>
+    <property name="visible">True</property>
   </widget>
 </glade-interface>
