--- a/src/gui.glade
+++ b/src/gui.glade
@@ -127,72 +127,30 @@
             <property name="orientation">vertical</property>
             <property name="spacing">5</property>
             <child>
-              <widget class="GtkDrawingArea" id="drawingarea_board">
+              <widget class="GtkHBox" id="hbox_gamestatus">
                 <property name="visible">True</property>
-              </widget>
-              <packing>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <widget class="GtkHBox" id="hbox_pieces">
-                <property name="height_request">180</property>
-                <property name="visible">True</property>
-                <property name="spacing">10</property>
+                <property name="spacing">1</property>
                 <child>
-                  <placeholder/>
+                  <widget class="GtkDrawingArea" id="drawingarea_board">
+                    <property name="visible">True</property>
+                  </widget>
+                  <packing>
+                    <property name="position">0</property>
+                  </packing>
                 </child>
                 <child>
-                  <widget class="GtkTable" id="table_editing_piece">
-                    <property name="width_request">180</property>
+                  <widget class="GtkHBox" id="hbox_computerpieces">
+                    <property name="width_request">100</property>
                     <property name="visible">True</property>
-                    <property name="n_rows">2</property>
-                    <property name="n_columns">2</property>
-                    <property name="column_spacing">2</property>
-                    <property name="row_spacing">2</property>
                     <child>
-                      <widget class="GtkButton" id="button_rotate">
-                        <property name="label" translatable="yes">Rotate -&gt;</property>
+                      <widget class="GtkVSeparator" id="vseparator_computerpieces">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">True</property>
+                        <property name="orientation">vertical</property>
                       </widget>
                       <packing>
-                        <property name="x_options"></property>
-                        <property name="y_options"></property>
-                      </packing>
-                    </child>
-                    <child>
-                      <widget class="GtkDrawingArea" id="drawingarea_editing_piece">
-                        <property name="width_request">115</property>
-                        <property name="height_request">115</property>
-                        <property name="visible">True</property>
-                      </widget>
-                      <packing>
-                        <property name="top_attach">1</property>
-                        <property name="bottom_attach">2</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <widget class="GtkButton" id="button_mirror">
-                        <property name="label" translatable="yes">  M
-   i
-   r
-   r
-   o
-   r
-&lt;-&gt;</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">True</property>
-                      </widget>
-                      <packing>
-                        <property name="left_attach">1</property>
-                        <property name="right_attach">2</property>
-                        <property name="top_attach">1</property>
-                        <property name="bottom_attach">2</property>
-                        <property name="x_options"></property>
-                        <property name="y_options">GTK_FILL</property>
+                        <property name="expand">False</property>
+                        <property name="padding">5</property>
+                        <property name="position">0</property>
                       </packing>
                     </child>
                     <child>
@@ -206,6 +164,22 @@
                 </child>
               </widget>
               <packing>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <widget class="GtkHBox" id="hbox_editpieces">
+                <property name="height_request">180</property>
+                <property name="visible">True</property>
+                <property name="spacing">10</property>
+                <child>
+                  <placeholder/>
+                </child>
+                <child>
+                  <placeholder/>
+                </child>
+              </widget>
+              <packing>
                 <property name="expand">False</property>
                 <property name="position">1</property>
               </packing>
@@ -216,7 +190,7 @@
           </packing>
         </child>
         <child>
-          <widget class="GtkStatusbar" id="statusbar">
+          <widget class="GtkStatusbar" id="statusbar1">
             <property name="visible">True</property>
             <property name="spacing">2</property>
           </widget>
@@ -238,7 +212,7 @@
     <property name="has_separator">False</property>
     <property name="program_name">Block'em</property>
     <property name="version">0.0</property>
-    <property name="copyright" translatable="yes">Copyright &#xA9; 2009 Faustino Frechilla</property>
+    <property name="copyright" translatable="yes">Copyright &#xA9; 2009-2010 Faustino Frechilla</property>
     <property name="comments" translatable="yes">A board strategy game against the computer</property>
     <property name="license" translatable="yes">blockem is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.
 
@@ -269,8 +243,60 @@ You should have received a copy of the GNU General Public License along with blo
       </widget>
     </child>
   </widget>
-  <widget class="GtkDrawingArea" id="drawingarea_pick_pieces">
-    <property name="width_request">360</property>
+  <widget class="GtkTable" id="table_editing_piece">
+    <property name="width_request">180</property>
     <property name="visible">True</property>
+    <property name="n_rows">2</property>
+    <property name="n_columns">2</property>
+    <property name="column_spacing">2</property>
+    <property name="row_spacing">2</property>
+    <child>
+      <widget class="GtkButton" id="button_rotate">
+        <property name="label" translatable="yes">Rotate -&gt;</property>
+        <property name="visible">True</property>
+        <property name="can_focus">True</property>
+        <property name="receives_default">True</property>
+      </widget>
+      <packing>
+        <property name="x_options"></property>
+        <property name="y_options"></property>
+      </packing>
+    </child>
+    <child>
+      <widget class="GtkDrawingArea" id="drawingarea_editing_piece">
+        <property name="width_request">115</property>
+        <property name="height_request">115</property>
+        <property name="visible">True</property>
+      </widget>
+      <packing>
+        <property name="top_attach">1</property>
+        <property name="bottom_attach">2</property>
+      </packing>
+    </child>
+    <child>
+      <widget class="GtkButton" id="button_mirror">
+        <property name="label" translatable="yes">  M
+   i
+   r
+   r
+   o
+   r
+&lt;-&gt;</property>
+        <property name="visible">True</property>
+        <property name="can_focus">True</property>
+        <property name="receives_default">True</property>
+      </widget>
+      <packing>
+        <property name="left_attach">1</property>
+        <property name="right_attach">2</property>
+        <property name="top_attach">1</property>
+        <property name="bottom_attach">2</property>
+        <property name="x_options"></property>
+        <property name="y_options">GTK_FILL</property>
+      </packing>
+    </child>
+    <child>
+      <placeholder/>
+    </child>
   </widget>
 </glade-interface>
