quite a few changes to separate board drawing area from main window. It's not finished yet though, trunk compiles but application doesn't work as expected

--- a/src/gui.glade
+++ b/src/gui.glade
@@ -131,12 +131,7 @@
                 <property name="visible">True</property>
                 <property name="spacing">1</property>
                 <child>
-                  <widget class="GtkDrawingArea" id="drawingarea_board">
-                    <property name="visible">True</property>
-                  </widget>
-                  <packing>
-                    <property name="position">0</property>
-                  </packing>
+                  <placeholder/>
                 </child>
                 <child>
                   <widget class="GtkHBox" id="hbox_computerpieces">
@@ -323,5 +318,8 @@ You should have received a copy of the GNU General Public License along with blo
     <child>
       <placeholder/>
     </child>
+  </widget>
+  <widget class="GtkDrawingArea" id="drawingarea_board">
+    <property name="visible">True</property>
   </widget>
 </glade-interface>
