--- a/src/gui.glade
+++ b/src/gui.glade
@@ -266,10 +266,10 @@ You should have received a copy of the GNU General Public License along with blo
   <widget class="GtkTable" id="table_editing_piece">
     <property name="width_request">180</property>
     <property name="visible">True</property>
-    <property name="n_rows">2</property>
+    <property name="n_rows">4</property>
     <property name="n_columns">4</property>
-    <property name="column_spacing">2</property>
-    <property name="row_spacing">2</property>
+    <property name="column_spacing">1</property>
+    <property name="row_spacing">1</property>
     <child>
       <widget class="GtkDrawingArea" id="drawingarea_editing_piece">
         <property name="width_request">115</property>
@@ -279,18 +279,12 @@ You should have received a copy of the GNU General Public License along with blo
       <packing>
         <property name="right_attach">3</property>
         <property name="top_attach">1</property>
-        <property name="bottom_attach">2</property>
+        <property name="bottom_attach">4</property>
       </packing>
     </child>
     <child>
       <widget class="GtkButton" id="button_mirror">
-        <property name="label" translatable="yes">  M
-   i
-   r
-   r
-   o
-   r
-&lt;-&gt;</property>
+        <property name="label" translatable="yes">&lt;-&gt;</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">True</property>
@@ -298,34 +292,72 @@ You should have received a copy of the GNU General Public License along with blo
       <packing>
         <property name="left_attach">3</property>
         <property name="right_attach">4</property>
-        <property name="top_attach">1</property>
-        <property name="bottom_attach">2</property>
-        <property name="x_options"></property>
-        <property name="y_options">GTK_FILL</property>
-      </packing>
-    </child>
-    <child>
-      <widget class="GtkButton" id="button_rotate_left">
-        <property name="label" translatable="yes"> &lt; </property>
-        <property name="visible">True</property>
-        <property name="can_focus">True</property>
-        <property name="receives_default">True</property>
-      </widget>
-      <packing>
+        <property name="top_attach">3</property>
+        <property name="bottom_attach">4</property>
         <property name="x_options"></property>
         <property name="y_options"></property>
       </packing>
     </child>
     <child>
-      <widget class="GtkButton" id="button_rotate_right">
-        <property name="label" translatable="yes"> &gt; </property>
+      <widget class="GtkButton" id="button_rotate_left">
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">True</property>
+        <child>
+          <placeholder/>
+        </child>
+      </widget>
+      <packing>
+        <property name="x_options">GTK_FILL</property>
+        <property name="y_options"></property>
+      </packing>
+    </child>
+    <child>
+      <widget class="GtkButton" id="button_rotate_right">
+        <property name="visible">True</property>
+        <property name="can_focus">True</property>
+        <property name="receives_default">True</property>
+        <child>
+          <placeholder/>
+        </child>
       </widget>
       <packing>
         <property name="left_attach">2</property>
         <property name="right_attach">3</property>
+        <property name="x_options">GTK_FILL</property>
+        <property name="y_options"></property>
+      </packing>
+    </child>
+    <child>
+      <widget class="GtkLabel" id="label_rotate">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">Rotate</property>
+        <property name="justify">center</property>
+        <property name="width_chars">8</property>
+      </widget>
+      <packing>
+        <property name="left_attach">1</property>
+        <property name="right_attach">2</property>
+        <property name="x_options"></property>
+        <property name="y_options"></property>
+      </packing>
+    </child>
+    <child>
+      <widget class="GtkLabel" id="label_mirror">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">M
+i
+r
+r
+o
+r</property>
+        <property name="justify">center</property>
+      </widget>
+      <packing>
+        <property name="left_attach">3</property>
+        <property name="right_attach">4</property>
+        <property name="top_attach">2</property>
+        <property name="bottom_attach">3</property>
         <property name="x_options"></property>
         <property name="y_options"></property>
       </packing>
@@ -334,16 +366,7 @@ You should have received a copy of the GNU General Public License along with blo
       <placeholder/>
     </child>
     <child>
-      <widget class="GtkLabel" id="label_rotate">
-        <property name="visible">True</property>
-        <property name="label" translatable="yes">Rotate</property>
-      </widget>
-      <packing>
-        <property name="left_attach">1</property>
-        <property name="right_attach">2</property>
-        <property name="x_options"></property>
-        <property name="y_options"></property>
-      </packing>
+      <placeholder/>
     </child>
   </widget>
 </glade-interface>
