--- a/src/gui.glade
+++ b/src/gui.glade
@@ -122,6 +122,7 @@
                     </child>
                     <child>
                       <object class="GtkMenuItem" id="menuitem_influence_areas">
+                        <property name="visible">True</property>
                         <property name="label" translatable="yes">_Influence areas</property>
                         <property name="use_underline">True</property>
                         <child type="submenu">
